--- a/client/package.json
+++ b/client/package.json
@@ -13,16 +13,22 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.22",
+    "axios": "^0.27.0",
     "bootstrap": "^5.1.3",
+    "multiselect": "^0.9.12",
+    "multiselect-react-dropdown": "^2.0.21",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "styled-components": "^5.3.5",
     "typescript": "^4.5.5",
+    "typescript-react-carousel": "^0.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +56,9 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
